deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  namespace: go-deneme
  labels:
    app: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      name: go-app-pod
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app-container
        image: hakiozdem/go-app:1
        ports:
        - port: 3000
