deployment/postgres.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgres"
  labels:
    app: "postgres"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "postgres"
  template:
    metadata:
      labels:
        app: "postgres"
    spec:
      containers:
      - name: "postgres"
        image: "postgres:latest"
        ports:
          - containerPort: 5432
            name: postgres

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres"
spec:
  ports:
    - port: 5432
  selector:
    app: "postgres"
