deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  labels:
    app: go-app
spec:
  selector:
    app: go-app
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32756
