deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
spec:
  defaultBackend:
    service:
      name: go-app-service
      port:
        number: 80
